# NanoGridBot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  README_zh.md  pyproject.toml  start-backend.sh  start-frontend.sh
.github/workflows/: release.yml  test.yml
container/: Dockerfile  build.sh
container/agent-runner/: package-lock.json  package.json
container/agent-runner/src/: index.ts  ipc-mcp-stdio.ts
crates/ngb-channels/: Cargo.toml
crates/ngb-channels/src/: lib.rs  telegram.rs
crates/ngb-cli/: Cargo.toml
crates/ngb-cli/src/: main.rs
crates/ngb-config/: Cargo.toml
crates/ngb-config/src/: config.rs  lib.rs  watcher.rs
crates/ngb-core/: Cargo.toml
crates/ngb-core/src/: container_prep.rs  container_runner.rs  container_session.rs  formatting.rs  group_queue.rs  ipc_handler.rs  lib.rs  logging.rs  mount_security.rs  orchestrator.rs  router.rs  security.rs  task_scheduler.rs  workspace_queue.rs
crates/ngb-core/src/utils/: circuit_breaker.rs  mod.rs  rate_limiter.rs  retry.rs  shutdown.rs
crates/ngb-db/: Cargo.toml
crates/ngb-db/src/: bindings.rs  connection.rs  groups.rs  lib.rs  messages.rs  metrics.rs  sessions.rs  tasks.rs  tokens.rs  workspaces.rs
crates/ngb-plugins/: Cargo.toml
crates/ngb-plugins/src/: lib.rs
crates/ngb-tui/: Cargo.toml  welcome.txt
crates/ngb-tui/src/: app.rs  engine.rs  keymap.rs  lib.rs  syntax.rs  tree.rs
crates/ngb-tui/src/theme/: mod.rs
crates/ngb-tui/src/transport/: ipc.rs  mock.rs  mod.rs  output.rs  pipe.rs  session.rs  ws.rs
crates/ngb-tui/tests/: integration_tests.rs
crates/ngb-types/: Cargo.toml
crates/ngb-types/src/: binding.rs  container.rs  enums.rs  error.rs  group.rs  lib.rs  message.rs  metrics.rs  task.rs  workspace.rs
crates/ngb-web/: Cargo.toml
crates/ngb-web/src/: lib.rs
docs/: README.md
docs/design/: CHANNEL_FEASIBILITY_ASSESSMENT.md  IMPLEMENTATION_PLAN.md  NANOGRIDBOT_DESIGN.md  PROJECT_COMPARISON_ANALYSIS.md  RUST_REWRITE_DESIGN.md  RUST_TUI_PROJECTS_ANALYSIS.md
docs/dev/: HAPPYCLOW_FRONTEND_INTEGRATION_ANALYSIS.md  NEXT_SESSION_GUIDE.md
docs/main/: ANALYSIS_SUMMARY.md  OPERATIONAL_GUIDE.md  QUICK_START.md  WORK_LOG.md
docs/plans/: 2026-02-17-container-isolation-enhancement.md  2026-02-17-mvp-phase3.md  2026-02-18-ngb-shell-tui.md  2026-02-18-workspace-architecture.md  2026-02-18-workspace-refactor-plan.md  2026-02-19-tui-feature-enhancements.md  2026-02-20-happyclaw-analysis.md  2026-02-20-ngb-tui-refactor-design.md  2026-02-21-frontend-phase-ac-impl.md  2026-02-21-frontend-phase-b-impl.md  2026-02-21-frontend-redesign.md
docs/testing/: AUTOMATION.md  E2E_TEST_PLAN.md  ENVIRONMENT_SETUP.md  QUICK_START.md  README.md  TEST_CASES.md  TEST_DATA.md  TEST_REPORT_TEMPLATE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
frontend/src/api/: adapter.ts  client.ts
frontend/src/components/chat/: ChatSidebar.tsx  ChatView.tsx  CreateContainerDialog.tsx  DiffViewer.tsx  GroupSkillsPanel.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageList.tsx  StreamingDisplay.tsx  ToolCallCard.tsx
frontend/src/components/common/: ColorPicker.tsx  EmojiAvatar.tsx  EmojiPicker.tsx
frontend/src/components/console/: BottomPanel.tsx  InspectorPanel.tsx  WorkspaceList.tsx
frontend/src/components/layout/: AppLayout.tsx  NavRail.tsx
frontend/src/components/settings/: AboutSection.tsx  AppearanceSection.tsx  SettingsNav.tsx
frontend/src/components/shared/: DirectoryBrowser.tsx
frontend/src/components/skills/: InstallSkillDialog.tsx  SkillCard.tsx
frontend/src/hooks/: useSwipeBack.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx  SetupPage.tsx  SkillsPage.tsx
frontend/src/stores/: auth.ts  chat.ts  groups.ts  monitor.ts  skills.ts
frontend/src/styles/: globals.css
frontend/src/utils/: url.ts
makefiles/: conda.mk  variables.mk
plugins/builtin/: __init__.py
plugins/builtin/auto_reply/: plugin.py
plugins/builtin/mention/: plugin.py
plugins/builtin/rate_limiter/: plugin.py
src/nanogridbot/: __init__.py  __main__.py  cli.py  config.py  logger.py  memory.py  task_logging.py  types.py
src/nanogridbot/auth/: __init__.py  dependencies.py  exceptions.py  invite.py  login_lock.py  password.py  session.py
src/nanogridbot/channels/: __init__.py  base.py  dingtalk.py  discord.py  events.py  factory.py  feishu.py  qq.py  slack.py  telegram.py  wecom.py  whatsapp.py
src/nanogridbot/core/: __init__.py  container_runner.py  container_session.py  group_queue.py  ipc_handler.py  mount_security.py  orchestrator.py  router.py  task_scheduler.py
src/nanogridbot/database/: __init__.py  connection.py  groups.py  messages.py  metrics.py  tasks.py  user_channel_configs.py  users.py
src/nanogridbot/plugins/: __init__.py  api.py  base.py  loader.py
src/nanogridbot/rbac/: __init__.py  dependencies.py  permissions.py
src/nanogridbot/security/: __init__.py  cipher.py  encryption.py  key_manager.py
src/nanogridbot/utils/: __init__.py  async_helpers.py  error_handling.py  formatting.py  security.py
src/nanogridbot/web/: __init__.py  app.py
tests/: conftest.py
tests/integration/: test_channels.py  test_cli.py  test_container_isolation.py  test_web.py
tests/unit/: test_async_helpers.py  test_auth.py  test_channel_factory.py  test_channels.py  test_cli.py  test_config.py  test_container_runner.py  test_container_session.py  test_core.py  test_coverage_boost.py  test_coverage_boost2.py  test_database.py  test_database_repos.py  test_error_handling.py  test_formatting.py  test_group_queue.py  test_ipc_handler.py  test_logger.py  test_main.py  test_memory.py  test_mount_security.py  test_orchestrator.py  test_orchestrator_extended.py  test_plugin_api.py  test_plugin_loader.py  test_plugins.py  test_rbac.py  test_router.py  test_security.py  test_security_encryption.py  test_task_logging.py  test_task_scheduler.py  test_task_scheduler_extended.py  test_types.py  test_web_app.py  test_web_websocket.py
