[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanogridbot"
version = "0.1.0-alpha"
description = "Personal Claude AI assistant accessible via multiple messaging platforms"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "NanoGridBot Team", email = "team@nanogridbot.dev" }
]
keywords = ["claude", "ai", "assistant", "messaging", "bot", "whatsapp", "telegram", "slack", "discord"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Async
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",

    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Data Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Logging
    "loguru>=0.7.0",

    # Scheduling
    "croniter>=2.0.0",

    # HTTP
    "httpx>=0.28.0",

    # YAML
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",

    # Code Quality
    "black>=25.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "isort>=5.13.0",

    # Type stubs
    "types-aiofiles>=23.2.1",
    "types-pyyaml>=6.0.0",
]

all = [
    "@",
    "nanogridbot[dev]",
]

[project.scripts]
nanogridbot = "nanogridbot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nanogridbot"]

[tool.hatch.build.targets.sdist]
include = ["src/nanogridbot"]

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src/nanogridbot",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--tb=short",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "loguru.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosqlite.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiofiles.*"
ignore_missing_imports = true
