[package]
name = "ngb-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ngb-types = { workspace = true }
ngb-core = { workspace = true }
ngb-db = { workspace = true }
ngb-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
teloxide = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
