[package]
name = "ngb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ngb"
path = "src/main.rs"

[dependencies]
ngb-types = { workspace = true }
ngb-config = { workspace = true }
ngb-core = { workspace = true }
ngb-db = { workspace = true }
ngb-channels = { path = "../ngb-channels" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
