[package]
name = "ngb-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ngb-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
