[package]
name = "ngb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ngb-types = { workspace = true }
ngb-config = { workspace = true }
ngb-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
