[package]
name = "ngb-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ngb-types = { workspace = true }
ngb-config = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
lru = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
